Timepad form updates

--- a/include/footer.html
+++ b/include/footer.html
@@ -72,9 +72,9 @@
 				</ul>
 				<div id="mc_embed_signup">
 
-<script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="//timepad.ru/js/tpwf/loader.min.js" data-timepad-widget="org_subscribe">
-	(function(){return {"orgtag":"fablab-event","orgid":"53589"}; })();
-</script>
+
+<script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js" data-timepad-customized="28709" data-timepad-apidomain="timepad.ru" data-timepad-widget-v2="event_list3"></script>
+
 
 			<!--	
 					<form action="//fablab77.us13.list-manage.com/subscribe/post?u=7498937aa1cca5b6d39671987&amp;id=e87db99a1b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
