--- a/include/footer.html
+++ b/include/footer.html
@@ -73,7 +73,9 @@
 				<div id="mc_embed_signup">
 
 
-<script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js" data-timepad-customized="28709" data-timepad-apidomain="timepad.ru" data-timepad-widget-v2="event_list3"></script>
+    <script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="//timepad.ru/js/tpwf/loader.min.js" data-timepad-widget="org_subscribe">
+	(function(){return {"orgtag":"fablabmoscowmisis","orgid":"101589"}; })();
+</script>
 
 
 			<!--	
