--- a/partial/events.html
+++ b/partial/events.html
@@ -1,6 +1,7 @@
 <article class="article container">
 	<div class="content">
 		<h2>События</h2>
-		<script type="text/javascript" defer="defer" charset="UTF-8" data-timepad-customized="14761" data-timepad-widget-v2="event_list3" src="https://timepad.ru/js/tpwf/loader/min/loader.js"></script>
+		<script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js" data-timepad-customized="28709" data-timepad-apidomain="timepad.ru" data-timepad-widget-v2="event_list3"></script>
+
 	</div>
 </article>
