mmf logo timepadd upd

--- a/include/header.html
+++ b/include/header.html
@@ -74,7 +74,7 @@
 					<li><a href="#/events"><font color="red"><strong>События</strong></font></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
-					<li><a href="http://www.makerfairemoscow.com/" target="_blank"><img src="https://ucare.timepad.ru/7460a825-9568-4e8f-876d-72ed2f8b8d66/-/preview/280x800/" alt="Первый фестиваль для и о Мейкерах" height="18"></a></li>
+					<li><a href="http://www.makerfairemoscow.com/" target="_blank"><img src="img/logos/Moscow_MF_Logo.png" alt="Первый фестиваль для и о Мейкерах" height="18"></a></li>
 					<li><a href="http://web.mit.edu/" target="_blank"><img src="img/logos/mit.png" alt="MIT" height="18"></a></li>
 					<li><a href="http://www.misis.ru/" target="blank"><img src="https://makerfairemoscow.files.wordpress.com/2016/03/logo-sm-black-no-text1.png?w=181&h=70
 " alt="Moscow Institute of Steel and Alloys" height="50"></a></li>
