--- a/partial/main.html
+++ b/partial/main.html
@@ -1,11 +1,12 @@
 <div class="main">
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
-	<!--
-		<div data-img="/img/magistracy/2016.jpg" class="fotorama-container">
+	
+		<div data-img="/img/magistracy/2017.jpg" class="fotorama-container">
 			<div class="container">
-				<a href="https://fablab-event.timepad.ru/event/352279/" class="btn btn-outline btn-lg slide-heading btn-success magistracy">Поступить!</a>
+				<a href="https://fablab-event.timepad.ru/event/352279/" class="btn btn-outline btn-lg slide-heading btn-success magistracy">Поступить</a>
 			</div>
 		</div>
+	<!--	
 		<div data-img="/img/slider/tree.png" data-thumb="/img/slider/thumb/tree.jpg"><div class="hide"></div></div>
 	
 
