mmf, kids sleds

--- a/partial/main.html
+++ b/partial/main.html
@@ -3,7 +3,19 @@
 	
 		<div data-img="/img/magistracy/2017.jpg" class="fotorama-container">
 			<div class="container">
-				<a href="https://fablab-event.timepad.ru/event/352279/" class="btn btn-outline btn-lg slide-heading btn-success magistracy">Поступить</a>
+				<a href="http://bit.ly/2utdMQ6" class="btn btn-outline btn-lg slide-heading btn-success magistracy">Поступить</a>
+			</div>
+		</div>
+
+		<div data-img="/img/slider/mmf.jpg" class="fotorama-container">
+			<div class="container">
+				<a href="http://moscow.makerfaire.com/" class="btn btn-outline btn-lg slide-heading btn-success magistracy">СТАТЬ УЧАСТНИКОМ</a>
+			</div>
+		</div>
+
+		<div data-img="/img/slider/kid.jpg" class="fotorama-container">
+			<div class="container">
+				<a href="http://fablab77.ru/#/events" class="btn btn-outline btn-lg slide-heading btn-success magistracy">ШКОЛЬНИКАМ</a>
 			</div>
 		</div>
 	<!--	
