master page item in menu

--- a/include/header.html
+++ b/include/header.html
@@ -26,6 +26,8 @@
 							<li><a href="#/fablab/team">Команда</a></li>
 						</ul>
 					</li>
+					<li><a href="#/master">ЦТПО</a></li>
+					<!--
 					<li>
 						<a class="dropdown-toggle" data-toggle="dropdown">Оборудование <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
@@ -58,6 +60,7 @@
 							<li><a href="#/equipment/grinder">Точильный станок</a></li>
 						</ul>
 					</li>
+					-->
 					<li>
 						<a class="dropdown-toggle" data-toggle="dropdown">Технологии<span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
@@ -145,10 +148,8 @@
 						</form>
 
 					</li>
-=======
 					<li><a href="https://fablab-event.timepad.ru/event/268353/"><strong class="red">FABKids</strong></a></li>
 					<li><a href="http://makerfairemoscow.com"><strong class="blue">MakerFaireMoscow2016</strong></a></li>
->>>>>>> origin/master
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
 					<li><a href="http://web.mit.edu/" target="_blank"><img src="img/logos/mit.png" alt="MIT" height="18"></a></li>
