--- a/include/header.html
+++ b/include/header.html
@@ -26,7 +26,7 @@
 							<li><a href="#/fablab/team">Команда</a></li>
 						</ul>
 					</li>
-					<li><a href="#/master">ЦТПО</a></li>
+					<li><a href="#/master">Магистратура</a></li>
 					<!--
 					<li>
 						<a class="dropdown-toggle" data-toggle="dropdown">Оборудование <span class="caret"></span></a>
