--- a/partial/master.html
+++ b/partial/master.html
@@ -2,63 +2,91 @@
 	<h2>Магистраура</h2>
 	<p>
 		На базе ФАБЛАБ МОСКВА проходит обучение курса магистратуры НИТУ «МИСиС» по программе «Технологии и материалы цифрового производства» - это первая программа подготовки специалистов цифрового производства в России.
-Сейчас идет третий набор на программу и вы можете стать ее студентом, даже если предыдущий профиль подготовки у вас не технический – на курсе мы учим и «физиков» и «лириков». 
-Ниже больше информации о программе, а если вы готовы стать нашим студентом, то обязательно посетите встречу ориентацию (расписание тут) и подайте документы до 20 июля.
-
 	</p>
-	<img src="/img/ctpo/1.jpg" alt="">
 	<p>
-		ЦТПО — это уникальная площадка дополнительного образования московских школьников и предметного повышения квалификации педагогов.<br>
-		Знакомство с ЦТПО можно начать с экскурсии (заявку присылайте на fablab@misis.ru), чтобы потом поучаствовать в тематическом мастер-классе, послушать лекцию или поучаствовать в образовательной программе, например:
+		Сейчас идет третий набор на программу и вы можете стать ее студентом, даже если предыдущий профиль подготовки у вас не технический – на курсе мы учим и «физиков» и «лириков». 
+		Ниже больше информации о программе, а если вы готовы стать нашим студентом, то обязательно посетите встречу ориентацию (расписание тут) и подайте документы до 20 июля.
 	</p>
+
 	<br>
-	<h3>Создание Созданий</h3>
-	<p>Хватит расстреливать компьютерных монстров, научись создавать своих собственных!</p>
-	<img src="/img/ctpo/2.jpg" alt="">
+
+	<h3>ПЕРВЫЕ ВЫПУСКНИКИ </h3>
+	<p>Первыми выпускниками программы стали:</p>
 	<ul>
-		<li>знакомство с техникой моделирования методом виртуальной лепки;</li>
-		<li>знакомство с устройством и принципом работы 3D принтера, работающего по принципу распределения расплавленного термопласта;</li>
-		<li>изучение техники подготовки сложных моделей к печати;</li>
-		<li>изучение принципов моделирования с учетом особенностей технологии 3D печати (избежание или минимизация использования поддержек, обеспечение необходимой прочности детали и ее устойчивости в процессе печати и пр.)</li>
-		<li>знакомство с принципами открытого лицензирования продуктов и условий правомерного заимствования.</li>
+		<li>Юлия Смит  с работой "Кромсатель" (3-х осевой станок резки пенопласта горячей струной) - кстати, Юлия - экономист по первому образованию!</li>
+		<li>Мастер информационных систем и обратной кинематики Азамат Тавитов Настоящий профи в ЧПУ Кирилл булатов с работой 3-х осевого фрезерного станка по металлу,</li>
+		<li>Инженер и историк оружия Дмитрий Мамзурин с разработкой ЧПУ перистальтической системы для подачи реагентов в химический реактор синтеза наночастиц,</li>
+		<li>Михаил Кульбеда – конструктоp квадрокоптеров – с работой быстро разборной рамы для квадрокоптера,</li>
+		<li>Агрокибернетик Елизавета Боржкова - с системой автоматизации выращивания растений.</li>
 	</ul>
+	<img src="/img/magistracy/yu.jpg" alt="">
+	<br>
+	<img src="/img/magistracy/az.jpg" alt="" style="display:inline-block;width:38%">
+	<img src="/img/magistracy/azp.jpg" alt="" style="display:inline-block;width:38%">
+	<br>
+	<img src="/img/magistracy/dip.jpg" alt="" style="display:inline-block;width:38%">
+	<img src="/img/magistracy/di.jpg" alt="" style="display:inline-block;width:38%">
+	<br>
+	<img src="/img/magistracy/ki.jpg" alt="">
+	<br>
+
+	<h2>О ПРОГРАММЕ</h2>
+	<h3>Философия</h3>
+	<p>
+		Развитие компьютеров на несколько порядков упростило и удешевило получение, обработку, хранение и передачу информации. Развитие цифровых производственных технологий упрощает и удешевляет переход от информации (компьютерной модели) к материи (реальному изделию). В мире, в котором размывается граница между информацией и материей, неизбежно будет исчезать деление на дизайнеров, инженеров и программистов. Сегодня и, тем более, завтра будут нужны не узкие специалисты, а настоящие дивергенты, «на ты» общающиеся с различными современными и перспективными цифровыми технологиями.
+	</p>
 	<br>
 	<h3>Сделай и сыграй!</h3>
-	<p>Спроектируй, изготовь и собери собственную игру!</p>
-	<img src="/img/ctpo/3.jpg" alt="">
+	<p>
+		В программе нет теории без практики, и практики без результата. Стержнем обучения является ПРОектный подход, в рамках выполнения проектов будут формироваться и оттачиваться навыки проектирования, прототипирования, программирования и производство.
+	</p>
+	<p>
+		Реализация программы основана на активном привлечении действующих экспертов в области цифрового производства из России, США, Италии, Нидерландов, Испании, Японии.
+	</p>
+	<br>
+	<h3>Результатами обучения станут:</h3>
 	<ul>
-		<li>знакомство с историей и перспективами развития настольных спортивных игр в России и за рубежом;</li>
-		<li>знакомство с некоторыми существующими международными настольными спортивными играми;</li>
-		<li>изучение принципов проектирования функциональных конструкций из плоских деталей в CAD среде на примере настольных спортивных игр, моделирования  изготовления настольных игр на фрезерном станке;</li>
-		<li>изучение принципов работы фрезерного станка с ЧПУ в режиме раскроя листовых материалов;</li>
-		<li>освоение техники подготовки управляющих программ для раскроя материала с помощью фрезерного станка с ЧПУ;</li>
-		<li>приобретение навыков безопасной работы с опасным оборудованием;</li>
-		<li>знакомство с основными принципами ресурсосбережения на производстве на примере рационализации раскроя и загрузки оборудования;</li>
-		<li>знакомство с принципами открытого лицензирования продуктов и условий правомерного заимствования.</li>
+		<li>Владение современными инструментами разработки, отладки и изготовления новых продуктов:</li>
+		<li>компьютерное проектирование и симуляции;</li>
+		<li>прототипирование и досерийное производство (3D печать, лазерная резка, механическая обработка, литье и обработка давлением);</li>
+		<li>проектирование и изготовление электронных устройств.</li>
+		<li>Умение выбрать адекватный решаемой задаче материал и способ его обработки.</li>
+		<li>Понимание жизненного цикла продукта и технологического процесса.</li>
+		<li>Понимание необходимости ответственного подхода к разработке и применению новых продуктов.</li>
+		<li>Уважение к интеллектуальной собственности и неприятие плагиата; владение средствами правомочного заимствования, совместной разработки.</li>
+		<li>Наличие контактов с предприятиями и венчурными предпринимателями, а также портфолио реализованных командных и индивидуальных проектов.</li>
 	</ul>
 	<br>
-	<h3>Человек и машина</h3>
-	<p>Найди общий язык с роботом!</p>
-	<img src="/img/ctpo/4.jpg" alt="">
-	<ul>
-		<li>знакомство с устройством мобильного робота;</li>
-		<li>знакомство с программным средством разработки электронных устройств;</li>
-		<li>знакомство с аппаратно-программным комплексом быстрого прототипирования электронных устройств;</li>
-		<li>знакомство с устройством и принципом работы прецизионного фрезерного станка, необходимого для изготовления электроники (печатных плат);</li>
-		<li>изучение техники пайки SMD-компонентов, компонентов, монтируемых в отверстие;</li>
-		<li>практика исследования и синтеза жестового языка управления мобильным роботом.</li>
-	</ul>
+	<p>
+		Выпускники программы — креативные технические специалисты, готовые к технологическим вызовам стремительно меняющегося мира. Они способны интегрировать компетенции из различных областей и применять их для создания и вывода на рынок новых высокотехнологичных продуктов. Это ценнейший человеческий капитал малых технологичных стартапов и крупных корпораций модернизируемой России.
+	</p>
+	<p>
+		Программа для подготовки к экзамену:  http://bit.ly/2utwEhM
+	</p>
+	<p>
+		Форма — очная.
+	</p>
+	<p>
+		Срок обучения — 2 года.
+	</p>
+	<p>
+		Количество бюджетных мест — 25.
+	</p>
+	<p>
+		Стоимость обучения в платном отделении: 245,4 тыс.р. 
+	</p>
 	<br>
-	<h3>Построй свой дом</h3>
-	<p>Объединитесь с друзьями в коллектив и постройте свой уникальный дом... или хотя бы домик!</p>
-	<img src="/img/ctpo/5.jpg" alt="">
-	<ul>
-		<li>освоение методов проектирования в CAD системе, включая работу со сборками;</li>
-		<li>освоение методов макетирования с применением устройства лазерной резки;</li>
-		<li>изучение принципов работы фрезерного станка с ЧПУ в режиме раскроя листовых материалов;</li>
-		<li>освоение техники подготовки управляющих программ для раскроя материала с помощью фрезерного станка с ЧПУ;</li>
-		<li>приобретение навыков работы в команде;</li>
-		<li>приобретение навыков безопасной работы с опасным оборудованием и тяжелыми деталями;</li>
-		<li>знакомство с принципами открытого лицензирования продуктов и условий правомерного заимствования.</li>
-	</ul>
+	<h2><strong>КОНТАКТЫ:</strong></h2>
+	<p>
+		<strong>Координатор</strong> - anna.vakulik@gmail.com, Вакулик Анна, +79150770484
+	</p> 
+	<p>
+		<strong>Руководитель программы</strong> — Владимир Кузнецов Евгеньевич 
+	</p>
+	<p>
+		<strong>Заведующий выпускающей кафедрой</strong> — Солонин Алексей Николаевич 
+	</p>
+	<p>
+		<a href="http://misis.ru/applicants/">Приемная комиссия НИТУ «МИСиС»</a>
+	</p> 
 </article>
