--- a/partial/master.html
+++ b/partial/master.html
@@ -61,7 +61,7 @@
 		Выпускники программы — креативные технические специалисты, готовые к технологическим вызовам стремительно меняющегося мира. Они способны интегрировать компетенции из различных областей и применять их для создания и вывода на рынок новых высокотехнологичных продуктов. Это ценнейший человеческий капитал малых технологичных стартапов и крупных корпораций модернизируемой России.
 	</p>
 	<p>
-		Программа для подготовки к экзамену:  http://bit.ly/2utwEhM
+		<a href="http://bit.ly/2utwEhM">Программа</a> для подготовки к экзамену:  <a href="http://bit.ly/2utwEhM">ссылка</a>
 	</p>
 	<p>
 		Форма — очная.
