--- a/partial/master.html
+++ b/partial/master.html
@@ -5,38 +5,34 @@
 	</p>
 	<p>
 		Сейчас идет третий набор на программу и вы можете стать ее студентом, даже если предыдущий профиль подготовки у вас не технический – на курсе мы учим и «физиков» и «лириков». 
-		Ниже больше информации о программе, а если вы готовы стать нашим студентом, то обязательно посетите встречу ориентацию (расписание тут) и подайте документы до 20 июля.
+		Ниже больше информации о программе, а если вы готовы стать нашим студентом, то обязательно посетите встречу ориентацию (расписание  <a href="http://bit.ly/2utdMQ6">тут</a>) и подайте документы до 20 июля.
 	</p>
-
+	<br>
+	<img src="/img/magistracy/conjunto.jpg" alt="">
 	<br>
 
 	<h3>ПЕРВЫЕ ВЫПУСКНИКИ </h3>
 	<p>Первыми выпускниками программы стали:</p>
 	<ul>
-		<li>Юлия Смит  с работой "Кромсатель" (3-х осевой станок резки пенопласта горячей струной) - кстати, Юлия - экономист по первому образованию!</li>
+		<li><strong>Юлия Смит</strong> с работой "Кромсатель" (3-х осевой станок резки пенопласта горячей струной) - кстати, Юлия - экономист по первому образованию!</li>
 		<li>Мастер информационных систем и обратной кинематики Азамат Тавитов Настоящий профи в ЧПУ Кирилл булатов с работой 3-х осевого фрезерного станка по металлу,</li>
-		<li>Инженер и историк оружия Дмитрий Мамзурин с разработкой ЧПУ перистальтической системы для подачи реагентов в химический реактор синтеза наночастиц,</li>
-		<li>Михаил Кульбеда – конструктоp квадрокоптеров – с работой быстро разборной рамы для квадрокоптера,</li>
-		<li>Агрокибернетик Елизавета Боржкова - с системой автоматизации выращивания растений.</li>
+		<li>Инженер и историк оружия <strong>Дмитрий Мамзурин</strong> с разработкой ЧПУ перистальтической системы для подачи реагентов в химический реактор синтеза наночастиц,</li>
+		<li><strong>Михаил Кульбеда</strong> – конструктоp квадрокоптеров – с работой быстро разборной рамы для квадрокоптера,</li>
+		<li>Агрокибернетик <strong>Елизавета Боржкова</strong> - с системой автоматизации выращивания растений.</li>
 	</ul>
-	<img src="/img/magistracy/yu.jpg" alt="">
 	<br>
-	<img src="/img/magistracy/az.jpg" alt="" style="display:inline-block;width:38%">
-	<img src="/img/magistracy/azp.jpg" alt="" style="display:inline-block;width:38%">
+	<img src="/img/magistracy/ms1.jpg" alt="" style="">
 	<br>
-	<img src="/img/magistracy/dip.jpg" alt="" style="display:inline-block;width:38%">
-	<img src="/img/magistracy/di.jpg" alt="" style="display:inline-block;width:38%">
-	<br>
-	<img src="/img/magistracy/ki.jpg" alt="">
+	<img src="/img/magistracy/ms2.jpg" alt="" style="">
 	<br>
 
-	<h2>О ПРОГРАММЕ</h2>
-	<h3>Философия</h3>
+	<h3><strong>О ПРОГРАММЕ</strong></h3>
+	<h4><strong>Философия</strong></h4>
 	<p>
 		Развитие компьютеров на несколько порядков упростило и удешевило получение, обработку, хранение и передачу информации. Развитие цифровых производственных технологий упрощает и удешевляет переход от информации (компьютерной модели) к материи (реальному изделию). В мире, в котором размывается граница между информацией и материей, неизбежно будет исчезать деление на дизайнеров, инженеров и программистов. Сегодня и, тем более, завтра будут нужны не узкие специалисты, а настоящие дивергенты, «на ты» общающиеся с различными современными и перспективными цифровыми технологиями.
 	</p>
 	<br>
-	<h3>Сделай и сыграй!</h3>
+	<h4><strong>По стандартам CDIO<strong></h4>
 	<p>
 		В программе нет теории без практики, и практики без результата. Стержнем обучения является ПРОектный подход, в рамках выполнения проектов будут формироваться и оттачиваться навыки проектирования, прототипирования, программирования и производство.
 	</p>
@@ -44,7 +40,7 @@
 		Реализация программы основана на активном привлечении действующих экспертов в области цифрового производства из России, США, Италии, Нидерландов, Испании, Японии.
 	</p>
 	<br>
-	<h3>Результатами обучения станут:</h3>
+	<h4><strong>Результатами обучения станут:</strong></h4>
 	<ul>
 		<li>Владение современными инструментами разработки, отладки и изготовления новых продуктов:</li>
 		<li>компьютерное проектирование и симуляции;</li>
@@ -61,7 +57,7 @@
 		Выпускники программы — креативные технические специалисты, готовые к технологическим вызовам стремительно меняющегося мира. Они способны интегрировать компетенции из различных областей и применять их для создания и вывода на рынок новых высокотехнологичных продуктов. Это ценнейший человеческий капитал малых технологичных стартапов и крупных корпораций модернизируемой России.
 	</p>
 	<p>
-		<a href="http://bit.ly/2utwEhM">Программа</a> для подготовки к экзамену:  <a href="http://bit.ly/2utwEhM">ссылка</a>
+		<a href="http://bit.ly/2utwEhM">Программа для подготовки</a> к экзамену:  <a href="http://bit.ly/2utwEhM">http://bit.ly/2utwEhM</a>
 	</p>
 	<p>
 		Форма — очная.
@@ -89,4 +85,6 @@
 	<p>
 		<a href="http://misis.ru/applicants/">Приемная комиссия НИТУ «МИСиС»</a>
 	</p> 
+	<br>
+	<img src="/img/magistracy/trium.jpg" alt="">
 </article>
