--- a/partial/master.html
+++ b/partial/master.html
@@ -32,7 +32,7 @@
 		Развитие компьютеров на несколько порядков упростило и удешевило получение, обработку, хранение и передачу информации. Развитие цифровых производственных технологий упрощает и удешевляет переход от информации (компьютерной модели) к материи (реальному изделию). В мире, в котором размывается граница между информацией и материей, неизбежно будет исчезать деление на дизайнеров, инженеров и программистов. Сегодня и, тем более, завтра будут нужны не узкие специалисты, а настоящие дивергенты, «на ты» общающиеся с различными современными и перспективными цифровыми технологиями.
 	</p>
 	<br>
-	<h4><strong>По стандартам CDIO<strong></h4>
+	<h4><strong>По стандартам CDIO</strong></h4>
 	<p>
 		В программе нет теории без практики, и практики без результата. Стержнем обучения является ПРОектный подход, в рамках выполнения проектов будут формироваться и оттачиваться навыки проектирования, прототипирования, программирования и производство.
 	</p>
