--- a/partial/master.html
+++ b/partial/master.html
@@ -5,7 +5,7 @@
 	</p>
 	<p>
 		Сейчас идет третий набор на программу и вы можете стать ее студентом, даже если предыдущий профиль подготовки у вас не технический – на курсе мы учим и «физиков» и «лириков». 
-		Ниже больше информации о программе, а если вы готовы стать нашим студентом, то обязательно посетите встречу ориентацию (расписание  <a href="http://bit.ly/2utdMQ6">тут</a>) и подайте документы до 20 июля.
+		Ниже больше информации о программе, а если вы готовы стать нашим студентом, то обязательно посетите встречу ориентацию (расписание  <a href="http://bit.ly/2utdMQ6"><strong>тут</strong></a>) и подайте документы до 20 июля.
 	</p>
 	<br>
 	<img src="/img/magistracy/conjunto.jpg" alt="">
