--- a/partial/master.html
+++ b/partial/master.html
@@ -15,7 +15,8 @@
 	<p>Первыми выпускниками программы стали:</p>
 	<ul>
 		<li><strong>Юлия Смит</strong> с работой "Кромсатель" (3-х осевой станок резки пенопласта горячей струной) - кстати, Юлия - экономист по первому образованию!</li>
-		<li>Мастер информационных систем и обратной кинематики Азамат Тавитов Настоящий профи в ЧПУ Кирилл булатов с работой 3-х осевого фрезерного станка по металлу,</li>
+		<li>Мастер информационных систем и обратной кинематики Азамат Тавитов</li>
+		<li>Настоящий профи в ЧПУ <strong>Кирилл Булатов</strong> с работой 3-х осевого фрезерного станка по металлу,</li>
 		<li>Инженер и историк оружия <strong>Дмитрий Мамзурин</strong> с разработкой ЧПУ перистальтической системы для подачи реагентов в химический реактор синтеза наночастиц,</li>
 		<li><strong>Михаил Кульбеда</strong> – конструктоp квадрокоптеров – с работой быстро разборной рамы для квадрокоптера,</li>
 		<li>Агрокибернетик <strong>Елизавета Боржкова</strong> - с системой автоматизации выращивания растений.</li>
