--- a/partial/master.html
+++ b/partial/master.html
@@ -75,10 +75,10 @@
 	<br>
 	<h2><strong>КОНТАКТЫ:</strong></h2>
 	<p>
-		<strong>Координатор</strong> - anna.vakulik@gmail.com, Вакулик Анна, +79150770484
+		<strong>Координатор</strong> - <b style="text-decoration: underline;">anna.vakulik@gmail.com</b>, Вакулик Анна, +79150770484
 	</p> 
 	<p>
-		<strong>Руководитель программы</strong> — Владимир Кузнецов Евгеньевич 
+		<strong>Руководитель программы</strong> — Кузнецов Владимир Евгеньевич 
 	</p>
 	<p>
 		<strong>Заведующий выпускающей кафедрой</strong> — Солонин Алексей Николаевич 
