--- a/partial/master.html
+++ b/partial/master.html
@@ -75,7 +75,7 @@
 	<br>
 	<h2><strong>КОНТАКТЫ:</strong></h2>
 	<p>
-		<strong>Координатор</strong> - <b style="text-decoration: underline;">anna.vakulik@gmail.com</b>, Вакулик Анна, +79150770484
+		<strong>Координатор</strong> - <email style="text-decoration: underline;">anna.vakulik@gmail.com</email>, Вакулик Анна, +79150770484
 	</p> 
 	<p>
 		<strong>Руководитель программы</strong> — Кузнецов Владимир Евгеньевич 
