--- a/partial/main.html
+++ b/partial/main.html
@@ -1,19 +1,19 @@
 <div class="main">
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
 	
-		<div data-img="/img/magistracy/2017.jpg" class="fotorama-container">
+		<div data-img="/img/magistracy/2017.png" class="fotorama-container">
 			<div class="container">
 				<a href="http://bit.ly/2utdMQ6" class="btn btn-outline btn-lg slide-heading btn-success magistracy">Поступить</a>
 			</div>
 		</div>
 
-		<div data-img="/img/slider/mmf.jpg" class="fotorama-container">
+		<div data-img="/img/slider/mmf.png" class="fotorama-container">
 			<div class="container">
 				<a href="http://moscow.makerfaire.com/" class="btn btn-outline btn-lg slide-heading btn-success magistracy">СТАТЬ УЧАСТНИКОМ</a>
 			</div>
 		</div>
 
-		<div data-img="/img/slider/kid.jpg" class="fotorama-container">
+		<div data-img="/img/slider/kid.png" class="fotorama-container">
 			<div class="container">
 				<a href="http://fablab77.ru/#/events" class="btn btn-outline btn-lg slide-heading btn-success magistracy">ШКОЛЬНИКАМ</a>
 			</div>
