--- a/partial/main.html
+++ b/partial/main.html
@@ -3,7 +3,7 @@
 	
 		<div data-img="/img/magistracy/20171.png" class="fotorama-container">
 			<div class="container">
-				<a href="http://bit.ly/2utdMQ6" class="btn btn-outline btn-lg slide-heading btn-success magistracy">Поступить</a>
+				<a href="http://bit.ly/2utdMQ6" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;right:300px;color:#ffffff !important;background: #ff0000 !important;border:none">Поступить</a>
 			</div>
 		</div>
 
