--- a/partial/main.html
+++ b/partial/main.html
@@ -3,19 +3,19 @@
 	
 		<div data-img="/img/magistracy/20171.png" class="fotorama-container">
 			<div class="container">
-				<a href="http://bit.ly/2utdMQ6" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;right:300px;color:#ffffff !important;background: #ff0000 !important;border:none">Поступить</a>
+				<a href="http://bit.ly/2utdMQ6" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Поступить</a>
 			</div>
 		</div>
 
 		<div data-img="/img/slider/mmf.png" class="fotorama-container">
 			<div class="container">
-				<a href="http://moscow.makerfaire.com/" class="btn btn-outline btn-lg slide-heading btn-success magistracy">СТАТЬ УЧАСТНИКОМ</a>
+				<a href="http://moscow.makerfaire.com/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">СТАТЬ УЧАСТНИКОМ</a>
 			</div>
 		</div>
 
 		<div data-img="/img/slider/kid.png" class="fotorama-container">
 			<div class="container">
-				<a href="http://fablab77.ru/#/events" class="btn btn-outline btn-lg slide-heading btn-success magistracy">ШКОЛЬНИКАМ</a>
+				<a href="http://fablab77.ru/#/events" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">ШКОЛЬНИКАМ</a>
 			</div>
 		</div>
 	<!--	
