master title upd

--- a/partial/master.html
+++ b/partial/master.html
@@ -1,5 +1,5 @@
 <article class="ctpo article container">
-	<h2>Магистраура</h2>
+	<h2>Магистратура</h2>
 	<p>
 		На базе ФАБЛАБ МОСКВА проходит обучение курса магистратуры НИТУ «МИСиС» по программе «Технологии и материалы цифрового производства» - это первая программа подготовки специалистов цифрового производства в России.
 	</p>
@@ -15,7 +15,7 @@
 	<p>Первыми выпускниками программы стали:</p>
 	<ul>
 		<li><strong>Юлия Смит</strong> с работой "Кромсатель" (3-х осевой станок резки пенопласта горячей струной) - кстати, Юлия - экономист по первому образованию!</li>
-		<li>Мастер информационных систем и обратной кинематики Азамат Тавитов,</li>
+		<li>Мастер информационных систем и обратной кинематики <strong>Азамат Тавитов,</strong></li>
 		<li>Настоящий профи в ЧПУ <strong>Кирилл Булатов</strong> с работой 3-х осевого фрезерного станка по металлу,</li>
 		<li>Инженер и историк оружия <strong>Дмитрий Мамзурин</strong> с разработкой ЧПУ перистальтической системы для подачи реагентов в химический реактор синтеза наночастиц,</li>
 		<li><strong>Михаил Кульбеда</strong> – конструктоp квадрокоптеров – с работой быстро разборной рамы для квадрокоптера,</li>
