masters text upd

--- a/partial/master.html
+++ b/partial/master.html
@@ -4,9 +4,16 @@
 		На базе ФАБЛАБ МОСКВА проходит обучение курса магистратуры НИТУ «МИСиС» по программе «Технологии и материалы цифрового производства» - это первая программа подготовки специалистов цифрового производства в России.
 	</p>
 	<p>
-		Сейчас идет третий набор на программу и вы можете стать ее студентом, даже если предыдущий профиль подготовки у вас не технический – на курсе мы учим и «физиков» и «лириков». 
-		Ниже больше информации о программе, а если вы готовы стать нашим студентом, то обязательно посетите встречу ориентацию (расписание  <a href="http://bit.ly/2utdMQ6"><strong>тут</strong></a>) и подайте документы до 20 июля.
+		Новый набор будет открыт в 2018 году и вы можете стать ее студентом, даже если предыдущий профиль подготовки у вас не технический – на курсе мы учим и «физиков» и «лириков».</p>
+	<ul>Поступить в нашу магистратуру можно:
+		<li>- по творческому конкурсу НИТУ "МИСиС" (прием заявок откроется весной 2018г.),</li>
+		<li>- в общем потоке, сдав экзамен летом 2018г.</li>
+	</ul>
+	<p>
+		Оставьте заявку о поступлении <a href="http://bit.ly/2utdMQ6"><strong>тут</strong></a>) - мы пригласим вас на собеседование, напомним о начале творческого конкурса и приеме документов, а также поможем сориентироваться и спланировать подготовку. 
 	</p>
+
+
 	<br>
 	<img src="/img/magistracy/conjunto.jpg" alt="">
 	<br>
