--- a/partial/master.html
+++ b/partial/master.html
@@ -5,10 +5,10 @@
 	</p>
 	<p>
 		Новый набор будет открыт в 2018 году и вы можете стать ее студентом, даже если предыдущий профиль подготовки у вас не технический – на курсе мы учим и «физиков» и «лириков».</p>
-	<ul>Поступить в нашу магистратуру можно:
-		<li>- по творческому конкурсу НИТУ "МИСиС" (прием заявок откроется весной 2018г.),</li>
-		<li>- в общем потоке, сдав экзамен летом 2018г.</li>
-	</ul>
+	<p>Поступить в нашу магистратуру можно:
+		<li> по творческому конкурсу НИТУ "МИСиС" (прием заявок откроется весной 2018г.),</li>
+		<li> в общем потоке, сдав экзамен летом 2018г.</li>
+	</p>
 	<p>
 		Оставьте заявку о поступлении <a href="http://bit.ly/2utdMQ6"><strong>тут</strong></a>) - мы пригласим вас на собеседование, напомним о начале творческого конкурса и приеме документов, а также поможем сориентироваться и спланировать подготовку. 
 	</p>
