--- a/partial/master.html
+++ b/partial/master.html
@@ -10,7 +10,7 @@
 		<li> в общем потоке, сдав экзамен летом 2018г.</li>
 	</p>
 	<p>
-		Оставьте заявку о поступлении <a href="http://bit.ly/2utdMQ6"><strong>тут</strong></a>) - мы пригласим вас на собеседование, напомним о начале творческого конкурса и приеме документов, а также поможем сориентироваться и спланировать подготовку. 
+		Оставьте заявку о поступлении <a href="http://bit.ly/2utdMQ6"><strong>тут</strong></a> - мы пригласим вас на собеседование, напомним о начале творческого конкурса и приеме документов, а также поможем сориентироваться и спланировать подготовку. 
 	</p>
 
 
