--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -6,6 +6,7 @@
 				<h3>Мы находимся на территории Национального исследовательского технологического университета "МИСиС":</h3>
 				<p>г. Москва, м. Октябрьская, Крымский вал, д. 3</p>
 				<h3>Часы работы:</h3>
+				<p style="color:red;font-size:18px;">В связи с подготовкой к фестивалю Maker Faire Moscow 2017 Фаблаб закрыт для посетителей в период до 10 сентября.</p>
 				<p>Ср&nbsp;&mdash; Чт: 11:00&nbsp;&mdash; 18:00<br>
 				Телефон: <nobr>8 (495) 955-01-20</nobr></p>
 			</div>
