--- a/partial/main.html
+++ b/partial/main.html
@@ -1,4 +1,4 @@
-<div class="main">
+﻿<div class="main">
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
 	<!--
 		<div data-img="/img/magistracy/20171.png" class="fotorama-container">
@@ -7,9 +7,9 @@
 			</div>
 		</div>
 	-->
-		<div data-img="/img/slider/mmf.png" class="fotorama-container">
+		<div data-img="/img/slider/arriving.png" class="fotorama-container">
 			<div class="container">
-				<a href="http://moscow.makerfaire.com/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">СТАТЬ УЧАСТНИКОМ</a>
+				<a href="http://moscow.makerfaire.com/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Бесплатный билет</a>
 			</div>
 		</div>
 
