--- a/partial/fablab/team.html
+++ b/partial/fablab/team.html
@@ -1,4 +1,4 @@
-<div class="container">
+﻿<div class="container">
 	<div class="content residents">
 		<h2>Наша команда</h2>
 		<h3>Владимир Евгеньевич Кузнецов</h3>
@@ -12,34 +12,16 @@
 			<dt>Телефон:</dt>
 			<dd>+7 (495) 955-01-20 </dd>
 		</dl>
-		<h3>Сычев Сергей Олегович</h3>
+		<h3>Вакулик Анна</h3>
 		<dl class="dl-horizontal">
 			<dt>Должность:</dt>
 			<dd>Заместитель директора</dd>
 			<dt>E-mail:</dt>
 			<dd>
-				<a href="mailto:fablab@misis.ru">sychev@misis.ru</a>
+				<a href="mailto:fablab@misis.ru">anna.vakulik@gmail.com</a>
 			</dd>
 			<dt>Телефон:</dt>
-			<dd>+7 (495) 955-01-20 </dd>
-		</dl>
-		<h3>Юдин Антон Владимирович</h3>
-		<dl class="dl-horizontal">
-			<dt>Должность:</dt>
-			<dd>Ведущий инженер</dd>
-			<dt>E-mail:</dt>
-			<dd>
-				<a href="mailto:fablab@misis.ru">fablab@misis.ru</a>
-			</dd>
-		</dl>
-		<h3>Никулин Алексей Михайлович</h3>
-		<dl class="dl-horizontal">
-			<dt>Должность:</dt>
-			<dd>Ведущий инженер</dd>
-			<dt>E-mail:</dt>
-			<dd>
-				<a href="http://www.skycluster.ru">skycluster.ru</a>
-			</dd>
+			<dd>+7 (915) 077-04-84 </dd>
 		</dl>
 		<h3>Барменкова Ярослава Андреевна</h3>
 		<dl class="dl-horizontal">
