--- a/include/header.html
+++ b/include/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+﻿<header class="header">
 	<nav class="navbar navbar-default navbar-base" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
@@ -63,6 +63,7 @@
 					<li>
 						<a class="dropdown-toggle" data-toggle="dropdown">Технологии<span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
+							<li><a href="#/equipment">Оборудование</a></li>	
 							<li><a href="#/creativity/2d">2D</a></li>
 							<li><a href="#/creativity/3d">3D</a></li>
 							<li><a href="#/creativity/2d-3d">Из 2D в 3D</a></li>
