--- a/partial/main.html
+++ b/partial/main.html
@@ -9,7 +9,7 @@
 	-->
 		<div data-img="/img/slider/arriving.png" class="fotorama-container">
 			<div class="container">
-				<a href="http://moscow.makerfaire.com/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Бесплатный билет</a>
+				<a href="https://fablabmoscowmisis.timepad.ru/event/512364/#register" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Бесплатный билет</a>
 			</div>
 		</div>
 
