--- a/partial/main.html
+++ b/partial/main.html
@@ -9,7 +9,8 @@
 	-->
 		<div data-img="/img/slider/arriving.png" class="fotorama-container">
 			<div class="container">
-				<a href="https://fablabmoscowmisis.timepad.ru/event/512364/#register" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Бесплатный билет</a>
+				<p>"Maker Faire Moscow прошел, но мейкеры на связи!</p>
+				<a href="http://moscow.makerfaire.com/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Видео и контакты</a>
 			</div>
 		</div>
 
@@ -18,9 +19,9 @@
 				<a href="http://fablab77.ru/#/events" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">ШКОЛЬНИКАМ</a>
 			</div>
 		</div>
-	<!--	
+	<!--
 		<div data-img="/img/slider/tree.png" data-thumb="/img/slider/thumb/tree.jpg"><div class="hide"></div></div>
-	
+
 
 		<div data-img="/img/slider/tree.png" class="fotorama-container">
 			<div class="container">
