--- a/partial/main.html
+++ b/partial/main.html
@@ -19,6 +19,13 @@
 				<a href="http://fablab77.ru/#/events" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">ШКОЛЬНИКАМ</a>
 			</div>
 		</div>
+
+		<div data-img="/img/slider/kid.png" class="fotorama-container">
+			<div class="container">
+				<p>Поступи в магистратуру Фаблаб по портфолио!</p>
+				<a href="https://fablabmoscowmisis.timepad.ru/event/512348/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Перейти</a>
+			</div>
+		</div>
 	<!--
 		<div data-img="/img/slider/tree.png" data-thumb="/img/slider/thumb/tree.jpg"><div class="hide"></div></div>
 
