--- a/partial/main.html
+++ b/partial/main.html
@@ -20,7 +20,7 @@
 			</div>
 		</div>
 
-		<div data-img="/img/slider/kid.png" class="fotorama-container">
+		<div data-img="/img/slider/dfvs.png" class="fotorama-container">
 			<div class="container">
 				<p>Поступи в магистратуру Фаблаб по портфолио!</p>
 				<a href="https://fablabmoscowmisis.timepad.ru/event/512348/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Перейти</a>
