--- a/partial/main.html
+++ b/partial/main.html
@@ -7,9 +7,9 @@
 			</div>
 		</div>
 	-->
-		<div data-img="/img/slider/arriving.png" class="fotorama-container">
+		<div data-img="/img/slider/arriving2.png" class="fotorama-container">
 			<div class="container">
-				<p>"Maker Faire Moscow прошел, но мейкеры на связи!</p>
+				<p class="slide-heading" style="bottom: 130px;color: #ffffff;font-size: 32px;">"Maker Faire Moscow прошел, но мейкеры на связи!</p>
 				<a href="http://moscow.makerfaire.com/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Видео и контакты</a>
 			</div>
 		</div>
@@ -20,9 +20,9 @@
 			</div>
 		</div>
 
-		<div data-img="/img/slider/dfvs.png" class="fotorama-container">
+		<div data-img="/img/slider/dfms.png" class="fotorama-container">
 			<div class="container">
-				<p>Поступи в магистратуру Фаблаб по портфолио!</p>
+				<p class="slide-heading" style="bottom: 130px;color: #ffffff;font-size: 32px;">Поступи в магистратуру Фаблаб по портфолио!</p>
 				<a href="https://fablabmoscowmisis.timepad.ru/event/512348/" class="btn btn-outline btn-lg slide-heading btn-success magistracy" style="padding: 10px 52px;border-radius:4px;color:#ffffff !important;background: #ff0000 !important;border:none">Перейти</a>
 			</div>
 		</div>
