--- a/include/header.html
+++ b/include/header.html
@@ -5,6 +5,7 @@
 				<a href="https://www.facebook.com/fablab77"><img src="img/logos/fablab_fb.png" alt="Файсбук"></a>
 				<a href="https://vk.com/fablabmoscow"><img src="img/logos/fablab_vk.png" alt="Вконтакте"></a>
 				<a href="https://www.instagram.com/fablabmoscow/"><img src="img/logos/fablab_inst.png" alt="Инстаграмм"></a>
+				<a href="https://www.youtube.com/watch?v=A5WhYOFurmQ&list=PLT8ppxu_Hr6tkwiShGblRQLYqRHtN28Rs"><img src="img/logos/youtube.png" alt="YouTube"></a>
 				<a href="#/"><img src="img/logos/fablab.png" alt="Фаблаб Москва"></a>
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex8-collapse">
 					<div class="navbar-header-button-icon">
@@ -63,7 +64,7 @@
 					<li>
 						<a class="dropdown-toggle" data-toggle="dropdown">Технологии<span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
-							<li><a href="#/equipment">Оборудование</a></li>	
+							<li><a href="#/equipment">Оборудование</a></li>
 							<li><a href="#/creativity/2d">2D</a></li>
 							<li><a href="#/creativity/3d">3D</a></li>
 							<li><a href="#/creativity/2d-3d">Из 2D в 3D</a></li>
