--- a/partial/events.html
+++ b/partial/events.html
@@ -1,6 +1,9 @@
 <article class="article container">
 	<div class="content">
 		<h2>События</h2>
+		<!--
+		<script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js" data-timepad-customized="28709" data-timepad-apidomain="timepad.ru" data-timepad-widget-v2="event_list3"></script>
+		-->
 		<script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js" data-timepad-customized="28709" data-timepad-apidomain="timepad.ru" data-timepad-widget-v2="event_list3"></script>
 
 	</div>
