--- a/partial/equipment.html
+++ b/partial/equipment.html
@@ -3,6 +3,12 @@
 		<h2>Список оборудования</h2>
 		<div class="row equipment-list">
 			<div class="col-xs-12 col-sm-6 col-md-4">
+				<a href="/#/equipment/trotec" class="thumbnail">
+					<img src="/img/equipment-list/trotec.jpg">
+					<span>Устройсво лазерной резки/гравировки Trotec Speedy 400 flex</span>
+				</a>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
 				<a href="/#/equipment/dimention-elite" class="thumbnail">
 					<img src="/img/equipment-list/elite.jpg">
 					<span>3D принтер Dimension Elite</span>
