--- a/partial/equipment/trotec.html
+++ b/partial/equipment/trotec.html
@@ -2,12 +2,12 @@
 	<div class="content">
 		<div class="row">
 			<div class="col-sm-12">
-				<h2>Устройсво лазерной резки/гравировки Trotec Speedy 400 flex 100Вт</h2>
+				<h2>Устройство лазерной резки/гравировки Trotec Speedy 400 flex 100Вт</h2>
 				<p>
 					Лазерный раскройщик/гравировщик <strong>Trotec Speedy 400 flex</strong>
 				</p>
 				<p>
-					Гибридный лазерный гравер с углекислотным и волоконным лазером.
+					Гибридный лазерный гравер с углекислотным и волоконным лазером. Лазерные станки серии Speedy - компактное, не требующее тех.обслуживания и очень скоростное оборудование (скорость обработки до 3,55 м/с и ускорение 5g). Подробнее о лазере можно узнать по <strong><a hrf="https://www.troteclaser.com/ru/oblasti-primeneniya/obrasovaniye-i-fablab/">ссылке</a></strong>.
 				</p>
 				<br>
 				<h4>Рабочая область</h4>
