--- a/include/footer.html
+++ b/include/footer.html
@@ -34,6 +34,7 @@
 			<div class="section equipment">
 				<h4><a href="#/equipment">Оборудование</a></h4>
 				<ul>
+					<li><a href="#/equipment/trotec">Устройство лазерной резки/гравировки Trotec Speedy 400 flex</a></li>
 					<li><a href="#/equipment/dimention-elite">3D принтер Dimension Elite</a></li>
 					<li><a href="#/equipment/3dtouch-3d-printer">3D принтер BFB Touch</a></li>
 					<li><a href="#/equipment/replicator">3D принтер Replicator</a></li>
