--- a/partial/equipment.html
+++ b/partial/equipment.html
@@ -5,7 +5,7 @@
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<a href="/#/equipment/trotec" class="thumbnail">
 					<img src="/img/equipment-list/trotec.jpg">
-					<span>Устройсво лазерной резки/гравировки Trotec Speedy 400 flex</span>
+					<span>Устройство лазерной резки/гравировки Trotec Speedy 400 flex</span>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-4">
