--- a/partial/equipment/trotec.html
+++ b/partial/equipment/trotec.html
@@ -7,7 +7,7 @@
 					Лазерный раскройщик/гравировщик <strong>Trotec Speedy 400 flex</strong>
 				</p>
 				<p>
-					Гибридный лазерный гравер с углекислотным и волоконным лазером. Лазерные станки серии Speedy - компактное, не требующее тех.обслуживания и очень скоростное оборудование (скорость обработки до 3,55 м/с и ускорение 5g). Подробнее о лазере можно узнать по <strong><a href="https://www.troteclaser.com/ru/oblasti-primeneniya/obrasovaniye-i-fablab/">ссылке</a></strong>.
+					Гибридный лазерный гравер с углекислотным и волоконным лазером. Лазерные станки серии Speedy - компактное, не требующее тех.обслуживания и очень скоростное оборудование (скорость обработки до 3,55 м/с и ускорение 5g). Подробнее о лазере можно узнать по <strong><a href="https://www.troteclaser.com/ru/oblasti-primeneniya/obrasovaniye-i-fablab/" target="blank">ссылке</a></strong>.
 				</p>
 				<br>
 				<h4>Рабочая область</h4>
