--- a/partial/equipment/trotec.html
+++ b/partial/equipment/trotec.html
@@ -3,6 +3,9 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<h2>Устройство лазерной резки/гравировки Trotec Speedy 400 flex 100Вт</h2>
+				<div fotorama class="fotorama" data-width="100%" data-height="600" data-loop="true" data-autoplay="true" data-allowfullscreen="true" data-fit="contain">
+					<img src="img/equipment/trotec/trotec.jpg">
+				</div>
 				<p>
 					Лазерный раскройщик/гравировщик <strong>Trotec Speedy 400 flex</strong>
 				</p>
